# mdbook-inline-notes

./: Cargo.toml  README.md
example/: book.toml
example/book/: 404.html  chapter_1.html  chapter_2.html  index.html  print.html  searcher-c2a407aa.js  searchindex-0ebd5fc0.js  searchindex-f81cc9b2.js  toc-3be34573.js  toc.html
example/src/: SUMMARY.md  chapter_1.md  chapter_2.md
src/: main.rs
